app/assets/stylesheets/application.scss
/* ... */
.previous-next:hover {
  background-color: #ddd;
  color: black;
}

.previous {
  background-color: #f1f1f1;
  color: black;
}

.next {
  background-color: #f1f1f1;
  color: black;
}

.round {
  border-radius: 50%;
}

// Admin Cards

.admin-card-1btn {
  padding: 10px;
  width: 70%;
  height: 100px;
  border: 1px;
  padding: 5px 5px 0px 5px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #c3df2a;
  text-align: left;
  margin-bottom: 30px;
  margin-left: auto;
  margin-right: auto;
}

@media only screen and (max-width: 460px) {
  .admin-card-1btn {
    text-align: center;
  }
}

.admin-card-2btn {
  padding: 10px;
  width: 70%;
  height: 150px;
  border: 1px;
  padding: 5px 5px 0px 5px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #c3df2a;
  text-align: left;
  margin-bottom: 30px;
  margin-left: auto;
  margin-right: auto;
}

@media only screen and (max-width: 460px) {
  .admin-card-2btn {
    text-align: center;
  }
}

// Search Page

.search-flex-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.search-product-card {
  padding: 10px;
  width: 70%;
  height: 125px;
  border: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #419234;
  text-align: left;
  overflow: scroll;
  margin-bottom: 5px;
  align-self: center;
  display: flex;
  justify-content: space-between;
  // align-items: center;
}

.search-review-card {
  padding: 10px;
  width: 70%;
  height: 140px;
  border: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #65e252;
  text-align: left;
  overflow: scroll;
  margin-bottom: 5px;
  align-self: center;
}

.search-noresult-card {
  width: 70%;
  height: 40px;
  border: 1px;
  padding: 5px 5px 0px 5px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #f7b8b7;
  text-align: center;
  align-self: center;
}

.search-product-text {
  margin-top: 8px;
  margin-left: 15px;
  display: flex;
  flex: 1;
  justify-content: space-between;

  .search-product-text > .search-adjust-stars {
    margin-top: 2px;
  }

}



.search-review-flex {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  flex-flow: column wrap;
  flex-wrap: wrap;
}

.search-review-box1 {
  order: 1;
}

.search-review-box2 {
  order: 2;
  margin-top: 10px;
}

.search-review-box3 {
  order: 3;
  margin-top: -2px;
  page-break-after: always;
}

.search-review-box5 {
  flex: 0 0 50%;
  order: 5;
  margin-top: -10px;
  // margin-left: 0 auto;
  align-self: flex-end;
}

.search-review-text {
  margin-top: -5px;
}

@media only screen and (max-width: 940px) {
  .search-product-card {
    width: 90%;
  }
  .search-noresult-card {
    width: 90%;
  }
  .search-review-card {
    width: 90%;
  }
}

@media only screen and (max-width: 620px) {
  .search-product-card {
    width: 100%;
  }
  .search-noresult-card {
    width: 100%;
  }
  .search-review-card {
    width: 100%;
    height: 160px;
  }
  .search-product-text {
    margin-top: -5px;
    flex-direction: column;

    & > div {
      text-align: left;
    }
  }

  .search-product-flex1 {
    margin-top: 10px;
  }
  .search-adjust-stars {
    margin-top: -10px;
  }
  .search-review-box3 {
    order: 3;
    margin-top: -2px;
    page-break-after: avoid;
  }
  .search-review-box5 {
    margin-top: -80px;
    // align-self: normal;
    // align-self: center;
  }

}

// Footer & Footer Link Page Styles

.footer {
  margin-top: 10px;
  height: 100px;
  min-width: 60vh;
  max-width: 100%;
  background-color: #f8f9fa;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;


  & > h4 {
    margin-left: 20px;
    margin-right: 20px;
  }

  & > p {
    align-self: flex-end;
    word-wrap: wrap;
    background-color: #f8f9fa;
    padding-bottom: 10px;
  }  
}

@media only screen and (max-width: 460px) {
  .footer {
    min-width: 100%;
    max-width: 100%;
    width: 100%;
    word-wrap: wrap;
    text-align: center;
  }
}


.footer-flex-end {
  page-break-after: always;
} 

.footer-legal {
  margin-top: -20px;
  text-align: center;
  font-size: .8rem;
}

.footer-spacer {
  margin-top: 15px;
}

// Static Footer Pages

.static-page-flex {
  display: flex;
  flex-direction: column;
  align-items: center;
  // align-items: baseline;

  & > .static-flex1 {
    order: 1;
    margin-top: 10px;
    // justify-content: center;

  }

  & > .static-flex2 {
    order: 2;
    margin-top: 40px;
  }
}

// Our Community

.community-flex-container {
  display: flex;
  // justify-content: center;
  flex-direction: column;
  // align-items: center;
  // width: auto;
  max-height: 220vh;
  flex-flow: column wrap;
  // flex-wrap: wrap;
}

.community-profile-card {
  flex: 50%;
  padding: 10px;
  width: 45%;
  height: 170px;
  border: 1px;
  border-radius: 5px;
  border: 1.5px solid #CBCBCB;
  border-top: 3px solid #e1d5ba;
  text-align: left;
  margin-bottom: 5px;
  align-self: center;
  white-space: nowrap;
  overflow: hidden;
}

@media (max-width: 900px) {
  .community-profile-card {
    flex: 100%;
    width: 80%;
  }

  .community-flex-container {
    max-height: max-content;
  }
}

.community-profile-flex {
  display: flex;
  align-items: center;
  // justify-content: space-between;
}

.community-profile-box1 {
  // flex: 0 0 50%;
  margin-right: 0 auto;
  order: 1;
  // margin-top: -10px;
  // margin-left: 0 auto;
  // align-self: flex-end;
  page-break-after: always;
}

.community-profile-box2 {
  margin-left: 40px;
  order: 2;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  width: auto;
  // flex-flow: column wrap;
  // flex-wrap: wrap;
}


.community-column-box1 {
  order: 1;
  // margin-top: -50px;
}

.community-column-box2 {
  order: 2;
  // margin-top: 10px;
  & > .community-align-stars {
    display: inline-block;
  }
}

.community-column-box3 {
  order: 3;
  // margin-top: 10px;
}
/* ... */

